    - dwarfmonitor: Records dwarf activity to measure fort efficiency
    - mousequery: Look and poke at the map elements with the mouse.
    - outsideOnly: make raw-specified buildings impossible to build inside
    - resume: A plugin to help display and resume suspended constructions conveniently
    - stocks: An improved stocks display screen.
  Internals:
    - Core: there is now a per-save dfhack.init file for when the save is loaded, and another for when it is unloaded
    - EventManager: fixed job completion detection, fixed removal of TICK events, added EQUIPMENT_CHANGE event
    - Lua API for a better random number generator and perlin noise functions.
    - Once: easy way to make sure something happens once per run of DF, such as an error message

DFHack v0.34.11-r3

  Internals:
    - support for displaying active keybindings properly.
    - support for reusable widgets in lua screen library.
    - Maps::canStepBetween: returns whether you can walk between two tiles in one step.
    - EventManager: monitors various in game events centrally so that individual plugins
      don't have to monitor the same things redundantly.
    - Now works with OSX 10.6.8
  Notable bugfixes:
    - autobutcher can be re-enabled again after being stopped.
    - stopped Dwarf Manipulator from unmasking vampires.
    - Stonesense is now fixed on OSX
  Misc improvements:
    - fastdwarf: new mode using debug flags, and some internal consistency fixes.
    - added a small stand-alone utility for applying and removing binary patches.
    - removebadthoughts: add --dry-run option
    - superdwarf: work in adventure mode too
    - tweak stable-cursor: carries cursor location from/to Build menu.
    - deathcause: allow selection from the unitlist screen
    - slayrace: allow targetting undeads
  New tweaks:
    - tweak military-training: speed up melee squad training up to 10x (normally 3-5x).
  New scripts: